[MIG] Migration to v12

--- a/airport/views/res_partner_view.xml
+++ b/airport/views/res_partner_view.xml
@@ -5,8 +5,8 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="transportation.view_travel_form"/>
         <field name="arch" type="xml">
-            <page string="Travel" position="inside">
-                <group string="Airport">
+            <page id="travel_page" position="inside">
+                <group id="airport_group" string="Airport">
                     <field name="airport" />
                     <field name="iata_code"  attrs="{'invisible': [('airport','=',False)]}"/>
                 </group>
