--- a/transportation/views/partner_view.xml
+++ b/transportation/views/partner_view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <notebook position="inside">
-                <page string="Travel" attrs="{'invisible': [('is_company','=',False), ('child_ids', '=', [])]}" autofocus="autofocus"/>
+                <page id="travel_page" string="Travel" attrs="{'invisible': [('is_company','=',False), ('child_ids', '=', [])]}" autofocus="autofocus"/>
             </notebook>
         </field>
     </record>
